Use shallow cloning when getting PKGBUILDS

--- a/librewolf/Makefile
+++ b/librewolf/Makefile
@@ -1,7 +1,7 @@
 PKG = librewolf-bin
 
 PKGBUILD:
-	git clone https://aur.archlinux.org/${PKG}.git
+	git clone --depth=1 https://aur.archlinux.org/${PKG}.git
 	cp -f ${PKG}/{PKGBUILD,default*x*.png,librewolf.desktop} .
 	cp -f ${PKG}/librewolf-bin.install ./librewolf.install
 	sed -i 's/-bin//' PKGBUILD
