--- a/maxfetch/Makefile
+++ b/maxfetch/Makefile
@@ -1,7 +1,7 @@
 PKG = maxfetch
 
 PKGBUILD:
-	git clone https://aur.archlinux.org/${PKG}.git ${PKG}-aur
+	git clone --depth=1 https://aur.archlinux.org/${PKG}.git ${PKG}-aur
 	cp -f ${PKG}-aur/PKGBUILD .
 	rm -rf ${PKG}-aur
 
