Add virbos-livescripts and vscodium-marketplace

--- a/pkgs/Makefile
+++ b/pkgs/Makefile
@@ -1,16 +1,13 @@
 MAKEPKG = makepkg -cs --nosign
 REPOADD = repo-add
 
-PKGNAMES = librewolf maxfetch nvm vscodium
-PKGS     = librewolf-*.pkg.tar.xz maxfetch-*.pkg.tar.zst nvm-*.pkg.tar.zst vscodium-*.pkg.tar.xz
+PKGNAMES = librewolf maxfetch nvm virbos-livescripts vscodium vscodium-marketplace
+PKGS     = librewolf-*.pkg.tar.xz maxfetch-*.pkg.tar.zst nvm-*.pkg.tar.zst virbos-livescripts-*.pkg.tar.zst vscodium-*.pkg.tar.xz vscodium-marketplace-*.pkg.tar.zst
 
 all: virbos.db
 
 virbos.db: ${PKGS}
 	${REPOADD} virbos.db.tar.xz ${PKGS}
-	rm -f virbos.db virbos.files
-	mv virbos.db.tar.xz virbos.db
-	mv virbos.files.tar.xz virbos.files
 	rm -f *.sig
 
 librewolf-*.pkg.tar.xz:
@@ -25,9 +22,17 @@ nvm-*.pkg.tar.zst:
 	${MAKE} -C../nvm
 	cd ../nvm && PKGDEST="../pkgs" ${MAKEPKG}
 
+virbos-livescripts-*.pkg.tar.zst:
+	${MAKE} -C../virbos-livescripts
+	cd ../virbos-livescripts && PKGDEST="../pkgs" ${MAKEPKG}
+
 vscodium-*.pkg.tar.xz:
 	${MAKE} -C../vscodium
 	cd ../vscodium && PKGDEST="../pkgs" PKGEXT=".pkg.tar.xz" ${MAKEPKG}
+
+vscodium-marketplace-*.pkg.tar.zst:
+	${MAKE} -C../vscodium-marketplace
+	cd ../vscodium-marketplace && PKGDEST="../pkgs" ${MAKEPKG}
 
 clean:
 	rm -f virbos.db* virbos.files* ${PKGS}
