--- a/pkgs/Makefile
+++ b/pkgs/Makefile
@@ -1,10 +1,10 @@
 MAKEPKG = makepkg -cs --noconfirm --nosign
 REPOADD = repo-add
 
-PKGS     = alacritty-sixel ktechlab ly maxfetch ninvaders nvm \
-		   virbos-livescripts virbos-logos virbos-utils \
-		   vscodium-marketplace yay
-XZPKGS   = librewolf vscodium
+PKGS   = alacritty-sixel ktechlab lite-xl ly maxfetch \
+         ninvaders nvm virbos-livescripts virbos-logos virbos-utils \
+         vscodium-marketplace yay
+XZPKGS = librewolf vscodium
 
 all: virbos.db
 
