ktechlab: add ktechlab-*.tar.xz to ignore lists

--- a/ktechlab/Makefile
+++ b/ktechlab/Makefile
@@ -8,6 +8,6 @@ PKGBUILD:
 	rm -rf ${PKG}
 
 clean:
-	rm -rf PKGBUILD src pkg *.pkg.tar.*
+	rm -rf PKGBUILD src pkg *.pkg.tar.* ktechlab-*.tar.xz
 
 .PHONY: clean
