alacritty-sixel: remove

--- a/pkgs/Makefile
+++ b/pkgs/Makefile
@@ -1,8 +1,7 @@
 MAKEPKG = makepkg -cs --noconfirm --nosign
 REPOADD = repo-add
 
-PKGS   = alacritty-sixel      \
-         callisto             \
+PKGS   = callisto             \
          ktechlab             \
          lite-xl              \
          ly                   \
