treewide: remove DIFF, use patch -p0

--- a/ktechlab/Makefile
+++ b/ktechlab/Makefile
@@ -1,10 +1,9 @@
-PKG  = ktechlab
-DIFF = pkgbuild.diff
+PKG = ktechlab
 
 PKGBUILD:
 	git clone --depth=1 https://aur.archlinux.org/${PKG}.git
 	cp -f ${PKG}/PKGBUILD .
-	patch <${DIFF}
+	patch -p0 -i pkgbuild.diff
 	rm -rf ${PKG}
 
 clean:
