--- a/vscodium/.gitignore
+++ b/vscodium/.gitignore
@@ -1,12 +1,2 @@
-PKGBUILD
-*.install
-*.pkg.tar.*
-pkg/
-src/
-
-# vscodium-specific
-vscodium.desktop
-vscodium-wayland.desktop
-vscodium-uri-handler.desktop
-vscodium.sh
-VSCodium-*.tar.gz
+!Makefile
+*
