--- a/nvm/.gitignore
+++ b/nvm/.gitignore
@@ -1,11 +1,2 @@
-PKGBUILD
-*.install
-*.pkg.tar.*
-pkg/
-src/
-
-# nvm-specific
-nvm-*.tar.gz
-init-nvm.sh
-install-nvm-exec
-update.sh
+!Makefile
+*
