--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,8 +1,3 @@
-PKGBUILD
-*.install
-*.pkg.tar.*
-pkg/
-src/
-
-# <pkgname>-specific
-# (put extra files here)
+!Makefile
+# put other files you use here, e.g. patches
+*
