callisto: use git package

--- a/callisto/Makefile
+++ b/callisto/Makefile
@@ -1,11 +1,12 @@
-PKG = callisto
+PKG = callisto-git
 
 PKGBUILD:
 	git clone --depth=1 https://aur.archlinux.org/${PKG}.git
 	cp -f ${PKG}/PKGBUILD .
+	sed -i 's/-git//g' PKGBUILD
 	rm -rf ${PKG}
 
 clean:
-	rm -rf PKGBUILD src pkg *.pkg.tar.* callisto-*.tgz
+	rm -rf PKGBUILD src pkg *.pkg.tar.* callisto-git
 
 .PHONY: clean
