virbos-logos: clean correctly

--- a/virbos-logos/Makefile
+++ b/virbos-logos/Makefile
@@ -1,4 +1,4 @@
-PKG = logos
+PKG = virbos-logos
 
 PKGBUILD:
 	git clone --depth=1 https://github.com/Virbos/${PKG}.git
@@ -6,6 +6,6 @@ PKGBUILD:
 	rm -rf ${PKG}
 
 clean:
-	rm -rf PKGBUILD src pkg *.pkg.tar.*
+	rm -rf PKGBUILD src pkg *.pkg.tar.* ${PKG}
 
 .PHONY: clean
